# electroncooling

./: .gitignore  CMakeLists.txt  Developer manual.md  JSPEC User manual.md  Readme.md  Tutorial on the text-based user interface for JSPEC.md  Tutorial.md  User manual.md  beam.cc  beam.h  constants.h  cooler.h  dynamic.cc  dynamic.h  ecooling.cc  ecooling.h  functions.cc  functions.h  ibs.cc  ibs.h  main.cc  main_backup.cc  math_parser.cc  math_parser.h  ring.cc  ring.h  ui.cc  ui.h
cbp/: jspec.cbp
cooling_release/: cooling_release.cbp
examples/: dc_cooling.in
include/: arbitrary_electron_beam.h  beam.h  constants.h  cooler.h  dynamic.h  ecooling.h  force.h  functions.h  ibs.h  liuminosity.h  math_parser.h  particle_model.h  ring.h  turn_by_turn.h  ui.h
lib/: libmuparser.so.2.2.4
src/: arbitrary_electron_beam.cc  beam.cc  dynamic.cc  ecooling.cc  force.cc  functions.cc  ibs.cc  main.cc  math_parser.cc  particle_model.cc  ring.cc  turn_by_turn.cc  ui.cc
